Readme file added

--- a/Amanda-workspace/Calculating_dist.ipynb
+++ b/Amanda-workspace/Calculating_dist.ipynb
@@ -28,7 +28,7 @@
     "import folium\n",
     "from folium.plugins import MarkerCluster\n",
     "import pandas as pd\n",
-    "from shapely.geometry import Point\n",
+    "from shapely.ge ometry import Point\n",
     "import openrouteservice\n",
     "import os\n",
     "import time\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "21f4077d",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "39513af1",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "eb30a696",
    "metadata": {},
    "outputs": [],
@@ -199,13 +199,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "domain_df = pd.read_csv('/home/eeamanda/project-2-group-real-estate-industry-project-7-2025/datasets/domain_cleaned.csv')\n",
+    "domain_df = pd.read_csv('../datasets/domain_cleaned.csv')\n",
     "#Creating as geodataframe to read in the latitude and longitude \n",
     "domain_gdf = gpd.GeoDataFrame(\n",
     "    domain_df,\n",
     "    geometry=gpd.points_from_xy(domain_df.lon, domain_df.lat),\n",
     "    crs=\"EPSG:4326\" \n",
-    ")\n"
+    ")"
    ]
   },
   {
