--- a/Amanda-workspace/Future_ERP_Income_interpolate.ipynb
+++ b/Amanda-workspace/Future_ERP_Income_interpolate.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "a81ad53e",
    "metadata": {},
    "outputs": [
@@ -408,18 +408,18 @@
     }
    ],
    "source": [
-    "population_df = pd.read_csv('/home/eeamanda/project-2-group-real-estate-industry-project-7-2025/Amanda-workspace/full_erp_only_population_data.csv')\n",
+    "population_df = pd.read_csv('../Amanda-workspace/full_erp_only_population_data.csv')\n",
     "population_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "e6831917",
    "metadata": {},
    "outputs": [],
    "source": [
-    "properties_df = pd.read_csv(\"/home/eeamanda/project-2-group-real-estate-industry-project-7-2025/Amanda-workspace/properties_df.csv\")\n",
+    "properties_df = pd.read_csv(\"../Amanda-workspace/properties_df.csv\")\n",
     "properties_df[\"date\"] = pd.to_datetime(properties_df[\"date\"], format=\"mixed\", errors=\"raise\")"
    ]
   },
@@ -709,12 +709,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "b8c63e56",
    "metadata": {},
    "outputs": [],
    "source": [
-    "income_df = pd.read_csv(\"/home/eeamanda/project-2-group-real-estate-industry-project-7-2025/Amanda-workspace/income_predictions_2017_final.csv\")\n",
+    "income_df = pd.read_csv(\"../Amanda-workspace/income_predictions_2017_final.csv\")\n",
     "income_df = income_df.drop(income_df.index[0]).reset_index(drop=True) #First row is victoria we dont need it\n",
     "income_df = income_df.rename(columns={\"SA2\": \"sa2_code\"})"
    ]
@@ -1796,7 +1796,6 @@
    ],
    "source": [
     "import re\n",
-    "import pandas as pd\n",
     "\n",
     "# Ensure sa2_code is integer \n",
     "income_df['sa2_code'] = pd.to_numeric(income_df['sa2_code'], errors='coerce').astype('Int64')\n",
@@ -2110,13 +2109,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "c62d9cbe",
    "metadata": {},
    "outputs": [],
    "source": [
     "#This dataset contains the future data of crimes\n",
-    "prediction_df = pd.read_csv(\"/home/eeamanda/project-2-group-real-estate-industry-project-7-2025/Amanda-workspace/prediction_with_crime_deduped(in).csv\")\n",
+    "prediction_df = pd.read_csv(\"../Amanda-workspace/prediction_with_crime_deduped(in).csv\")\n",
     "prediction_df = prediction_df.drop(columns=[\"Quarter\", \"Year\",\"Incidents\",\"VictimRate\"], errors=\"ignore\")"
    ]
   },
@@ -2173,12 +2172,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "6d37ec80",
    "metadata": {},
    "outputs": [],
    "source": [
-    "foi_counts_df = pd.read_csv(\"/home/eeamanda/project-2-group-real-estate-industry-project-7-2025/Amanda-workspace/pivot_counts.csv\")"
+    "foi_counts_df = pd.read_csv(\"../Amanda-workspace/pivot_counts.csv\")"
    ]
   },
   {
@@ -2198,7 +2197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "a6bfe68f",
    "metadata": {},
    "outputs": [
@@ -2505,7 +2504,7 @@
     }
    ],
    "source": [
-    "prediction_df"
+    "prediction_df "
    ]
   },
   {
