--- a/Amanda-workspace/crime_sa2.ipynb
+++ b/Amanda-workspace/crime_sa2.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "19bd02c3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "crime_df = pd.read_csv(\"/home/eeamanda/project-2-group-real-estate-industry-project-7-2025/datasets/crime_dataset.csv\")\n",
-    "corr_df = pd.read_csv(\"/home/eeamanda/project-2-group-real-estate-industry-project-7-2025/datasets/CG_SA2_2021_LGA_2021.csv\")"
+    "import numpy as np\n",
+    "crime_df = pd.read_csv(\"../datasets/crime_dataset.csv\")\n",
+    "corr_df = pd.read_csv(\"../datasets/CG_SA2_2021_LGA_2021.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9c526328",
    "metadata": {},
    "outputs": [
@@ -417,9 +418,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
     "# Clean and format IDs \n",
     "crime_df[\"LGA_CODE21\"] = pd.to_numeric(crime_df[\"LGA_CODE21\"], errors=\"coerce\").round().astype(\"Int64\")\n",
     "crime_df[\"SA2_CODE21\"] = pd.to_numeric(crime_df[\"SA2_CODE21\"], errors=\"coerce\").round().astype(\"Int64\")\n",
@@ -478,7 +476,7 @@
    "outputs": [],
    "source": [
     "#Save result (one row per SA2)\n",
-    "sa2_weighted.to_csv(\"crime_dataset_weighted_corrected_SA2.csv\", index=False)"
+    "sa2_weig hted.to_csv(\"crime_dataset_weighted_corrected_SA2.csv\", index=False)"
    ]
   }
  ],
