--- a/Amanda-workspace/income_preprocess.ipynb
+++ b/Amanda-workspace/income_preprocess.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "95680ec5",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
     }
    ],
    "source": [
-    "income_df = pd.read_csv(\"/home/eeamanda/project-2-group-real-estate-industry-project-7-2025/Amanda-workspace/predicted_income_till_2030.csv\")\n",
+    "income_df = pd.read_csv(\"../Amanda-workspace/predicted_income_till_2030.csv\")\n",
     "income_df "
    ]
   },
