--- a/Amanda-workspace/number_of_foi.ipynb
+++ b/Amanda-workspace/number_of_foi.ipynb
@@ -35,13 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "b06fbe17",
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_properties = pd.read_csv(\"/home/eeamanda/project-2-group-real-estate-industry-project-7-2025/datasets/all_properties_tidy_enriched.csv\")\n",
-    "domain_properties = pd.read_csv(\"/home/eeamanda/project-2-group-real-estate-industry-project-7-2025/datasets/domain_cleaned.csv\")"
+    "all_properties = pd.read_csv(\"../datasets/all_properties_tidy_enriched.csv\")\n",
+    "domain_properties = pd.read_csv(\"../datasets/domain_cleaned.csv\")"
    ]
   },
   {
