--- a/Amanda-workspace/income_cleaning.ipynb
+++ b/Amanda-workspace/income_cleaning.ipynb
@@ -846,7 +846,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Remove earners (person)\n",
+    "#Remove earners \n",
     "columns_to_remove = [\"2017-18\", \"2018-19\", \"2019-20\", \"2020-21\", \"2021-22\"]\n",
     "vic_df = vic_df.drop(columns=columns_to_remove)"
    ]
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0a12f49e",
    "metadata": {},
    "outputs": [
@@ -1916,10 +1916,11 @@
    "source": [
     "cols_to_clean = vic_df.columns[2:]  # all columns after SA2 and SA2 NAME\n",
     "\n",
-    "for col in cols_to_clean:  # or sum_cols\n",
+    "#Convert to NANs\n",
+    "for col in cols_to_clean:  \n",
     "    vic_df[col] = pd.to_numeric(\n",
     "        vic_df[col].astype(str).str.replace(\",\", \"\"), \n",
-    "        errors='coerce'  # convert bad values to NaN\n",
+    "        errors='coerce'  \n",
     "    ).fillna(0) \n",
     "\n",
     "vic_df\n"
@@ -1927,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d9d0b8e9",
    "metadata": {},
    "outputs": [
@@ -1953,6 +1954,7 @@
     }
    ],
    "source": [
+    "#Combine them to a single df\n",
     "med_cols = [col for col in vic_df.columns if col.endswith(\".med\")]\n",
     "mean_cols = [col for col in vic_df.columns if col.endswith(\".mean\")]\n",
     "\n",
@@ -1981,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "ddeccf05",
    "metadata": {},
    "outputs": [
@@ -2009,7 +2011,7 @@
    "source": [
     "#Using CAGR\n",
     "latest_year_col = med_cols[-1]  \n",
-    "latest_year = 2022  # the numeric year corresponding to 2021-22\n",
+    "latest_year = 2022 \n",
     "target_year = 2030\n",
     "years_to_2030 = target_year - latest_year  # 8 years\n",
     "\n",
