--- a/Amanda-workspace/income_preprocess.ipynb
+++ b/Amanda-workspace/income_preprocess.ipynb
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4483451f",
    "metadata": {},
    "outputs": [
@@ -400,6 +400,7 @@
     }
    ],
    "source": [
+    "# Calculate CAGR\n",
     "med_cols = [col for col in income_df.columns if col.endswith(\".med\")]\n",
     "df_med_growth = income_df[med_cols].pct_change(axis=1) * 100\n",
     "\n",
@@ -409,7 +410,6 @@
     "    return ((end / start_safe) ** (1/n_years) - 1) * 100\n",
     "\n",
     "income_df['med_CAGR'] = income_df.apply(lambda x: calculate_cagr(x[med_cols[0]], x[med_cols[-1]], n_years), axis=1)\n",
-    "\n",
     "\n",
     "print(income_df[['SA2 NAME', 'med_CAGR']])"
    ]
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c30f9b9b",
    "metadata": {},
    "outputs": [
@@ -440,7 +440,7 @@
     }
    ],
    "source": [
-    "# 1. Identify columns and years\n",
+    "#  Identify columns and years\n",
     "med_cols = [col for col in income_df.columns if col.endswith(\".med\")]\n",
     "years = np.array([int(c.split('.')[0]) for c in med_cols])\n",
     "train_years = years[years <= 2021]\n",
@@ -453,7 +453,7 @@
     "# Storage for predictions and errors\n",
     "mae_lin, rmse_lin, mae_cagr, rmse_cagr = [], [], [], []\n",
     "\n",
-    "# 2. Loop by SA2 \n",
+    "# Loop by SA2 \n",
     "for idx, row in income_df.iterrows():\n",
     "    y = row[med_cols].values.astype(float)\n",
     "    y_dict = dict(zip(years, y))\n",
@@ -479,7 +479,7 @@
     "    mae_cagr.append(mean_absolute_error(y_test, y_pred_cagr))\n",
     "    rmse_cagr.append(root_mean_squared_error(y_test, y_pred_cagr))\n",
     "\n",
-    "# 3. Summarize\n",
+    "#  Summarize\n",
     "results = pd.DataFrame({\n",
     "    \"Model\": [\"Linear Regression\", \"CAGR\"],\n",
     "    \"MAE\": [np.mean(mae_lin), np.mean(mae_cagr)],\n",
@@ -487,8 +487,7 @@
     "})\n",
     "\n",
     "print(\"Model Accuracy Comparison (Test: 2021–2022)\")\n",
-    "print(results)\n",
-    "\n"
+    "print(results)"
    ]
   },
   {
