--- a/Amanda-workspace/number_of_foi.ipynb
+++ b/Amanda-workspace/number_of_foi.ipynb
@@ -579,34 +579,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "0c122094",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pivot_counts.to_csv(\"pivot_counts.csv\", index=False)"
+    "#Save to CSV\n",
+    "pivot_counts.to_csv(\"pivot_counts.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "id": "2814df96",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Rename Column names\n",
     "pivot_counts[\"SA2_CODE21\"] = pivot_counts[\"SA2_CODE21\"].astype(float)\n",
     "pivot_counts = pivot_counts.rename(columns={\n",
     "    \"cultural\": \"cultural_foi_count\",\n",
     "    \"education\": \"education_foi_count\",\n",
     "    \"health\": \"health_foi_count\",\n",
     "    \"others\": \"others_foi_count\",\n",
-    "    \"tourist\": \"tourist_foi_count\"   # only if you have a separate 'tourist' group\n",
+    "    \"tourist\": \"tourist_foi_count\"   \n",
     "})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "id": "31d8212b",
    "metadata": {},
    "outputs": [
@@ -951,12 +953,13 @@
     }
    ],
    "source": [
+    "#Merge with pivot counts\n",
     "all_properties = all_properties.merge(\n",
     "    pivot_counts,\n",
     "    on=\"SA2_CODE21\",\n",
     "    how=\"left\"   # keeps all rows from all_properties, even if no match\n",
     ")\n",
-    "all_properties\n"
+    "all_properties"
    ]
   },
   {
@@ -972,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "c8b21079",
    "metadata": {},
    "outputs": [
@@ -1365,6 +1368,7 @@
     }
    ],
    "source": [
+    "#Merge with pivot counts\n",
     "domain_properties = domain_properties.merge(\n",
     "    pivot_counts,\n",
     "    on=\"SA2_CODE21\",\n",
@@ -1375,11 +1379,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "id": "f71b2b8d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Save to CSV\n",
     "all_properties.to_csv(\"all_properties_foi_count.csv\", index=False)\n",
     "domain_properties.to_csv(\"domain_properties_foi_count.csv\", index=False)"
    ]
