--- a/Amanda-workspace/income_cleaning.ipynb
+++ b/Amanda-workspace/income_cleaning.ipynb
@@ -5,7 +5,7 @@
    "id": "3b3032f2",
    "metadata": {},
    "source": [
-    "# This notebook is for Cleaning the Income Dataset"
+    "# This notebook is for Cleaning and Predicting the Income Dataset"
    ]
   },
   {
