--- a/Amanda-workspace/number_of_foi.ipynb
+++ b/Amanda-workspace/number_of_foi.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "8c7f2d97",
+   "metadata": {},
+   "source": [
+    "# This Notebook is cleaning and preprocess the FOI points then add SA2 code for each FOI points"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "19ae4855",
    "metadata": {},
    "source": [
@@ -45,20 +53,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "22aaf85b",
-   "metadata": {},
-   "source": [
-    "# Clean and preprocess FOI POINTS and add SA2 code for each FOI points"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "93d3137c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Columns to drop\n",
     "cols_to_drop = [\n",
     "    \"UFI\", \"PFI\", \"FEATURE_ID\", \"PARENTFTID\",\n",
     "    \"SUPER_PFI\", \"CRDATE_PFI\", \"CRDATE_UFI\",\n",
@@ -133,11 +134,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "4d3cee9f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Putting them in their categories\n",
     "education =['primary school', 'secondary school', 'primary/secondary school','university']\n",
     "\n",
     "health = ['maternal/child health centre', 'community health centre', 'day procedure centre', 'disability support centre',\n",
