--- a/notebooks/01_data_preprocessing/01_population_preprocessing.ipynb
+++ b/notebooks/01_data_preprocessing/01_population_preprocessing.ipynb
@@ -14,6 +14,7 @@
    "metadata": {},
    "source": [
     "## Purpose\n",
+    "\n",
     "This notebook processes historical and projected population data for Victoria's SA2 regions, and integrates it with rental data to prepare features for later analysis and modelling. \n",
     "\n",
     "Key steps include:\n",
@@ -24,7 +25,16 @@
     "- Merge historical population, projected population, and rental data into a combined dataset\n",
     "- Compute population growth rates (historical and projected)\n",
     "- Interpolate missing ERP (Effective Rent Price) values across years\n",
-    "- Conduct backtesting to check interpolation accuracy (MAE, MAPE)"
+    "- Conduct backtesting to check interpolation accuracy (MAE, MAPE)\n",
+    "\n",
+    "## Inputs\n",
+    "- `../../datasets/population_data/32180_ERP_2024_SA2_GDA2020.gpkg` (historical ERP)\n",
+    "- `../../datasets/population_data/VIF2023_SA2_Pop_Hhold_Dwelling_Projections_to_2036_Release_2.xlsx` (projected ERP)\n",
+    "- `../../datasets/property/median_by_suburb/Moving annual median rent by suburb and town - March quarter 2025 (2).xlsx`\n",
+    "- `../../datasets/district_shape/sa2_lookup/mapped_target_suburbs.csv` (suburb → SA2 mapping)\n",
+    "\n",
+    "## Outputs\n",
+    "- `combined_df_full` — fully merged dataset including historical population, projected population, interpolated ERP values, and 2025 median rental prices by SA2\n"
    ]
   },
   {
