--- a/notebooks/01_data_preprocessing/02_income_preprocessing.ipynb
+++ b/notebooks/01_data_preprocessing/02_income_preprocessing.ipynb
@@ -27,8 +27,7 @@
     "\n",
     "## Outputs\n",
     "- `income_df` — cleaned and merged income dataset with predicted median incomes for 2023–2030\n",
-    "- `income_predictions_2017_final.csv` — CSV export of the final dataset with forecasts\n",
-    "- Summary of model accuracy (MAE, RMSE) for Linear Regression vs CAGR"
+    "- `income_predictions_2017_final.csv` — CSV export of the final dataset with forecasts"
    ]
   },
   {
