--- a/notebooks/02_data_integration/domain_data_integration.ipynb
+++ b/notebooks/02_data_integration/domain_data_integration.ipynb
@@ -8,7 +8,7 @@
     "# Domain Data Integration\n",
     "\n",
     "## Purpose\n",
-    "Merge and enrich the Domain property dataset with amenity distances, crime rates, population, and income data at the SA2 level for analysis and modeling.\n",
+    "Merge and enrich the Domain property dataset with amenity distances, crime rates, population, and income data at the SA2 level for analysis and modelling.\n",
     "\n",
     "## Inputs\n",
     "- `property_with_distances_copy.csv` – distances to CBD, supermarkets, train stations  \n",
