--- a/notebooks/04_modelling/property_rent_model.ipynb
+++ b/notebooks/04_modelling/property_rent_model.ipynb
@@ -5,7 +5,7 @@
    "id": "8e716849",
    "metadata": {},
    "source": [
-    "# Property_Rent_Modelling\n",
+    "# Property Rent Modelling\n",
     "\n",
     "## Purpose\n",
     "\n",
