--- a/notebooks/04_modelling/forecasting_combined.ipynb
+++ b/notebooks/04_modelling/forecasting_combined.ipynb
@@ -5,7 +5,7 @@
    "id": "83b0e6db",
    "metadata": {},
    "source": [
-    "# Property_Rent_2030_Forecasting.ipynb\n",
+    "# Final Predictions\n",
     "\n",
     "## Purpose\n",
     "Project property-level rents to 2030 by applying SA2-level predicted growth (from SARIMAX forecasts) to 2025 baseline rent predictions. Identify high-growth SA2s, property types, and bedroom/bathroom combinations for insights.\n",
